<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Regular Text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_text"
            android:text="@string/lorem_ipsum_long" />

        <TextView
            android:id="@+id/tv_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_size" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="2"
            android:value="24"
            android:valueFrom="12"
            android:valueTo="48" />


        <include
            android:id="@+id/layout_alignment"
            layout="@layout/layout_alignment_selector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/checkbox_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_bold"
                android:text="@string/bold" />

            <CheckBox
                android:id="@+id/checkbox_italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_italic"
                android:text="@string/italic" />


        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_underlined"
                android:text="@string/underlined" />

            <CheckBox
                android:id="@+id/checkbox_strikethrough"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_strikethrough"
                android:text="@string/strikethrough" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/checkbox_inverse_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inverse_color" />

            <CheckBox
                android:id="@+id/checkbox_add_3_line_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/add_3_line_space" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_print_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_text" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>