<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qr_code"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_qr_text"
            android:text="@string/lorem_ipsum_short" />

        <TextView
            android:id="@+id/tv_qr_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_size" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_qr_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:value="8"
            android:valueFrom="1"
            android:valueTo="16" />

        <include
            android:id="@+id/layout_alignment"
            layout="@layout/layout_alignment_selector" />

        <Button
            android:id="@+id/btn_print_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_qr_code" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>